[gd_scene load_steps=7 format=3 uid="uid://btwk1btgeve21"]

[ext_resource type="Texture2D" uid="uid://dgt8t4ruggyki" path="res://Assets/gun-rhythm-UI.png" id="1_6qxsk"]
[ext_resource type="Script" path="res://Scripts/GUI/Gun_UI.gd" id="2_noi40"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xgly"]
size = Vector2(4, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5384d"]
size = Vector2(10, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b8da6"]
size = Vector2(18, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ipx82"]

[node name="gun_UI" type="Sprite2D"]
texture_filter = 1
position = Vector2(-1, 0)
texture = ExtResource("1_6qxsk")
script = ExtResource("2_noi40")

[node name="PerfectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerfectArea"]
shape = SubResource("RectangleShape2D_7xgly")

[node name="GreatArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GreatArea"]
shape = SubResource("RectangleShape2D_5384d")

[node name="OkayArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OkayArea"]
shape = SubResource("RectangleShape2D_b8da6")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-236, -2)

[node name="MissedArea" type="CollisionShape2D" parent="Area2D"]
position = Vector2(167, 2)
shape = SubResource("RectangleShape2D_ipx82")

[connection signal="area_entered" from="PerfectArea" to="." method="_on_perfectArea_area_entered"]
[connection signal="area_exited" from="PerfectArea" to="." method="_on_perfectArea_area_exited"]
[connection signal="area_entered" from="GreatArea" to="." method="_on_greatArea_area_entered"]
[connection signal="area_exited" from="GreatArea" to="." method="_on_greatArea_area_exited"]
[connection signal="area_entered" from="OkayArea" to="." method="_on_okayArea_area_entered"]
[connection signal="area_exited" from="OkayArea" to="." method="_on_okayArea_area_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_missedArea_area_entered"]
